# ecn_ros_lab2

./: CMakeLists.txt  README.md  package.xml
launch/: puppet.launch
src/: puppet_node.cpp
